<resources>
    <string name="app_name">AAAF V2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AAAF V2</string>
    <string name="nav_header_subtitle">Manage Expenses</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_account">Accounts</string>
    <string name="menu_transaction">Transactions</string>
    <string name="menu_category">Categories</string>
    <string name="menu_create_account">Account</string>
    <string name="menu_create_transaction">Transaction</string>
    <string name="menu_create_category">Category</string>
    <string name="account_balance">Account Balance</string>
    <string name="account_tags_hash_separated">Account Tags (Hash-separated)</string>
    <string name="create_account">Create Account</string>
    <string name="account_type">Account Type</string>
    <string name="account_name">Account Name</string>
    <string name="update_account">Update Account</string>
    <string name="transaction_name">Transaction Name</string>
    <string name="transaction_date_yyyy_mm_dd">Transaction Date</string>
    <string name="category">Category</string>
    <string name="notes">Notes</string>
    <string name="amount">Amount</string>
    <string name="account_name_hint">Account Name</string>
    <string name="to_account_name">To Account Name</string>
    <string name="create_transaction">Create Transaction</string>
    <string name="expense_transaction">Expense Transaction</string>
    <string name="income_transaction">Income Transaction</string>
    <string name="transfer_transaction">Transfer Transaction</string>
    <string name="category_name">Category Name</string>
    <string name="parent_category">Parent Category</string>
    <string name="create_category">Create Category</string>
    <string name="update_transaction">Update Transaction</string>
    <string name="display_order">Display Order</string>
    <string name="menu_settings">Settings</string>
    <string name="manage_account_types">Manage Account Types</string>
    <string name="search">Search</string>
    <string name="account_type_name">Account Type Name</string>
    <string name="create_account_type">Create Account Type</string>
    <string name="update_balance">Update Balance</string>
    <string-array name="transaction_types">
        <item>Income</item>
        <item>Expense</item>
        <item>Transfer</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_recurring">Create Recurring</string>
    <string name="recurring_schedule">Recurring Schedule</string>
    <string name="recurring_end_date_yyyy_mm_dd">Recurring End Date (yyyy-MM-dd)</string>
    <string name="recurring_start_date_yyyy_mm_dd">Recurring Start Date (yyyy-MM-dd)</string>
    <string name="repeat_days">Repeat Interval (Days)</string>
    <string name="update_recurring">Update Recurring</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="copy_txn">Copy Transaction</string>
    <string name="delete">Delete</string>
    <string name="show_transactions">Show Transactions</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_category">Delete Category</string>
    <string name="delete_transaction">Delete Transaction</string>
    <string name="convert_recurring">Convert to Recurring</string>
    <string name="show_future_transactions">Show Future Transactions</string>
    <string name="delete_recurring_schedule">Delete Recurring Schedule</string>
    <string name="future_transactions">Future Transactions</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="export_database">Export Database</string>
    <string name="import_database">Import Database</string>
    <string name="update_selected_account">Update Account</string>
    <string name="update_selected_category">Update Category</string>
    <string name="update_transaction_name">Update Transaction Name</string>
    <string name="update_selected_to_account">Update To Account</string>
    <string name="filters">Filters</string>
    <string name="toggle_data_chart">Toggle Data/Chart</string>
    <string name="category_summary">Category Summary</string>
    <string name="balance_forecast_summary">Balance Forecast Summary</string>
    <string name="reports">Reports</string>
    <string name="total">Total</string>
    <string name="time_period">Time Period</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="from_date_dd_mm_yyyy">From Date (dd/MM/yyyy)</string>
    <string name="to_date_dd_mm_yyyy">To Date (dd/MM/yyyy)</string>
    <string name="categories">Categories</string>
    <string name="accounts">Accounts</string>
    <string name="account_types">Account Types</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="select_transaction_names">Select Transaction Names</string>
    <string name="select_items">Select Items</string>
    <string name="import_csv">Import CSV</string>
    <string name="export_csv">Export CSV</string>
    <string name="auto_backup">Auto Backup</string>
    <string name="auto_backup_enabled">Auto Backup Enabled</string>
    <string name="no_directory_selected">No directory selected</string>
    <string name="select_directory">Select Directory</string>
    <string name="apply_transaction_now">Apply Transaction Now</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="currency_code">Currency Code</string>
    <string name="conversion_factor">Conversion Factor</string>
    <string name="manage_currencies">Manage Currencies</string>
    <string name="set_change_primary_account">Set/Change Primary Account</string>
    <string name="add_edit_currencies">Add/Edit Currencies</string>
    <string name="primary_currency">Primary Currency</string>
    <string name="delete_currency">Delete Currency</string>
    <string name="clear_all_currency_data_debug">Clear All Currency Data (Debug)</string>
    <string name="closed_account">Closed Account</string>
    <string name="do_not_show_in_accounts_dropdown">Do not show in accounts dropdown</string>
    <string name="show_hide_closed_accounts">Show/Hide Closed Accounts</string>
    <string name="filter_parameters">Filter Parameters</string>
    <string name="import_qif">Import QIF</string>
    <string name="export_qif">Export QIF</string>
    <string name="import_export">Import/Export</string>
    <string name="create_saved_report">Create Saved Report</string>
    <string name="account_tags">Account Tags</string>
    <string name="report_name">Report Name</string>
    <string name="report_type">Report Type</string>
    <string name="date_selection_group">Date Selection Group</string>
    <string name="date_selection_fixed">Fixed Date</string>
    <string name="date_selection_relative">Relative Date</string>
    <string name="period_name">Period Name</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="no_file_selected">No file selected</string>
    <string name="upload_and_process">Upload and Process</string>
    <string name="new_item">New Item</string>
    <string name="saved_reports">Saved Reports</string>
    <string name="export_schedules_csv">Export Schedules CSV</string>
    <string name="import_schedules_csv">Import Schedules CSV</string>
    <string name="test_fragment">Test Fragment</string>
    <string name="select_qif_file">Select QIF File</string>
    <string name="select_csv_file">Select CSV File</string>
    <string name="create_new_account">Create New Account</string>
    <string name="about">About</string>
    <string name="application_version">Application Version</string>
    <string name="database_version">Database Version</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_add">+</string>
    <string name="_clear">C</string>
    <string name="_dot">.</string>
    <string name="_divide">/</string>
    <string name="_equals">=</string>
    <string name="_multiply">*</string>
    <string name="_subtract">-</string>
    <string name="_calculator_display_text">0</string>
    <string name="_plus_minus">+/-</string>
    <string name="refresh_recent_transactions">Refresh Recent Transactions</string>
    <string name="default_password">Default Password:123456</string>
</resources>