<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/calculatorDisplay"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#000000"
        android:gravity="center_vertical|end"
        android:padding="8dp"
        android:text="@string/_calculator_display_text"
        android:textSize="24sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow android:layout_weight="1">
            <Button android:id="@+id/button7" android:text="@string/_7" android:layout_weight="1" android:layout_margin="2dp" />
            <Button android:id="@+id/button8" android:text="@string/_8" android:layout_weight="1" android:layout_margin="2dp"/>
            <Button android:id="@+id/button9" android:text="@string/_9" android:layout_weight="1" android:layout_margin="2dp"/>
            <Button android:id="@+id/buttonDivide" android:text="@string/_divide" android:layout_weight="1" android:layout_margin="2dp"/>
        </TableRow>
        <TableRow android:layout_weight="1">
            <Button android:id="@+id/button4" android:text="@string/_4" android:layout_weight="1" android:layout_margin="2dp"/>
            <Button android:id="@+id/button5" android:text="@string/_5" android:layout_weight="1" android:layout_margin="2dp"/>
            <Button android:id="@+id/button6" android:text="@string/_6" android:layout_weight="1" android:layout_margin="2dp"/>
            <Button android:id="@+id/buttonMultiply" android:text="@string/_multiply" android:layout_weight="1" android:layout_margin="2dp"/>
        </TableRow>
        <TableRow android:layout_weight="1">
            <Button android:id="@+id/button1" android:text="@string/_1" android:layout_weight="1" android:layout_margin="2dp"/>
            <Button android:id="@+id/button2" android:text="@string/_2" android:layout_weight="1" android:layout_margin="2dp"/>
            <Button android:id="@+id/button3" android:text="@string/_3" android:layout_weight="1" android:layout_margin="2dp"/>
            <Button android:id="@+id/buttonSubtract" android:text="@string/_subtract" android:layout_weight="1" android:layout_margin="2dp"/>
        </TableRow>
        <TableRow android:layout_weight="1">
            <Button
                android:id="@+id/button0"
                android:text="@string/_0"
                tools:ignore="DuplicateSpeakableTextCheck"
                android:layout_weight="1"
                android:layout_margin="2dp"/>
            <Button android:id="@+id/buttonDecimal" android:text="@string/_dot" android:layout_weight="1" android:layout_margin="2dp"/>
            <Button android:id="@+id/buttonEquals" android:text="@string/_equals" android:layout_weight="1" android:layout_margin="2dp"/>
            <Button android:id="@+id/buttonAdd" android:text="@string/_add" android:layout_weight="1" android:layout_margin="2dp"/>
        </TableRow>
        <TableRow android:layout_weight="1">
            <Button android:id="@+id/buttonClear" android:text="@string/_clear" android:layout_span="3" android:layout_weight="1" android:layout_margin="2dp"/>
            <Button android:id="@+id/buttonPlusMinus" android:text="@string/_plus_minus" android:layout_span="1" android:layout_weight="1" android:layout_margin="2dp"/>
        </TableRow>

    </TableLayout>

</LinearLayout>