<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.SettingsFragment">

    <TextView
        android:id="@+id/account_type_text_view"
        style="@style/LargeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_account_types" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator_color" />

    <TextView
        android:id="@+id/categories_text_view"
        style="@style/LargeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_categories" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator_color" />

    <TextView
        android:id="@+id/currencies_text_view"
        style="@style/LargeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_currencies" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator_color" />

    <TextView
        android:id="@+id/import_export_home_text_view"
        style="@style/LargeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_export" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator_color" />

    <TextView
        android:id="@+id/future_transactions_text_view"
        style="@style/LargeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/future_transactions" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator_color" />

    <TextView
        android:id="@+id/about_app"
        style="@style/LargeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator_color" />
</LinearLayout>