<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autoBackup_enabled"
        android:text="@string/auto_backup_enabled"/>
    <Button
        android:id="@+id/selectDirectoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_directory" />
    <TextView
        android:id="@+id/selectedDirectoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_directory_selected" />
</LinearLayout>